--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 body {
-  font-family: "Geist";
+  font-family: "Manrope", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-size: 14px;
+  /* font-size: 14px; */
+  background-color: #f5f5f5;
 }
